--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <div class="form">
-                <form id="bookingForm"  method="post">
+                <form id="myForm">
                     <h2>Hotel Reservation Form</h2>
                     <div class="form-group">
                         <label for="name">Full Name:</label>
