--- a/index.html
+++ b/index.html
@@ -26,28 +26,10 @@
     });
 
     const result = await response.json();
-    console.log(result); // Handle the result as needed
-    alert(result.message); // Show an alert with the confirmation message
+    
+    // Redirect to the confirmation page with the message
     window.location.href = `confirm.html?message=${encodeURIComponent(result.message)}`;
-});
-    </script>
-</head>
-<body>
-    <div class="header">
-        <div class="head">
-            <div class="logo">
-                <img src="img/logo.png" alt="">
-            </div>
-            <div class="nav-links">
-                <a href="index.html" class="active">Home</a>
-                <a href="gallery.html">Gallery</a>
-                <a href="room.html">Room</a>
-                <a href="contacts.html">Contacts</a>
-                <a href="about.html">About</a>
-            </div>
-        </div>
-        <img src="img/hero.jpg" alt="hero">
-        <div class="hero">
+});  <div class="hero">
             <div class="desc">
                 <div class="name">
                     <h1 class="welcome">Welcome to</h1>
