--- a/index.html
+++ b/index.html
@@ -26,10 +26,26 @@
     });
 
     const result = await response.json();
-    
-    // Redirect to the confirmation page with the message
     window.location.href = `confirm.html?message=${encodeURIComponent(result.message)}`;
-});  <div class="hero">
+});
+    </script>
+</head>
+<body>
+    <div class="header">
+        <div class="head">
+            <div class="logo">
+                <img src="img/logo.png" alt="">
+            </div>
+            <div class="nav-links">
+                <a href="index.html" class="active">Home</a>
+                <a href="gallery.html">Gallery</a>
+                <a href="room.html">Room</a>
+                <a href="contacts.html">Contacts</a>
+                <a href="about.html">About</a>
+            </div>
+        </div>
+        <img src="img/hero.jpg" alt="hero">
+        <div class="hero">
             <div class="desc">
                 <div class="name">
                     <h1 class="welcome">Welcome to</h1>
